force-app/main/default/objects/Order/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>고객</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>판매</relationshipLabel>
    <relationshipName>contact</relationshipName>
    <type>Lookup</type>
</CustomField>