force-app/main/default/objects/Order/fields/DIscount_Rate__c.field-meta.xml
<CustomField>
    <fullName>DIscount_Rate__c</fullName>
    <label>할인율</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>