force-app/main/default/objects/Order/fields/discountedAmount__c.field-meta.xml
<CustomField>
    <fullName>discountedAmount__c</fullName>
    <label>실판매금액</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>