force-app/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Refund</value>
    </filters>
    <label>판매(환불)</label>
</ListView>