force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Contact__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>discountedAmount__c</columns>
    <columns>DIscount_Rate__c</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>모든 판매</label>
</ListView>